--- a/packages/audioplayers/pubspec.yaml
+++ b/packages/audioplayers/pubspec.yaml
@@ -22,11 +22,15 @@ flutter:
 
 dependencies:
   audioplayers_android: 
-   git:
+    git:
       url: git@github.com:jgrandchavin/audioplayers
       ref:  fix/illegale_state_exception_on_android_2
       path: packages/audioplayers_android
-  audioplayers_darwin: ^5.0.2
+  audioplayers_darwin:
+    git:
+      url: git@github.com:jgrandchavin/audioplayers
+      ref:  fix/illegale_state_exception_on_android_2
+      path: packages/audioplayers_darwin
   audioplayers_linux: ^3.1.0
   audioplayers_platform_interface: ^6.1.0
   audioplayers_web: ^4.1.0
